--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "coderhouse-backend-nodejs",
+  "name": "coderhouse-backend-fp",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "start": "node ./app.js",
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -14,5 +16,8 @@
     "backend"
   ],
   "author": "Rudy Axel Sarabia Veliz",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
