--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "express-router": "^0.0.1",
+    "socket.io": "^4.6.2",
     "uuid": "^9.0.0"
   }
 }
