--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-router": "^0.0.1",
+    "mongoose": "^7.3.3",
     "socket.io": "^4.6.2",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.44.0",
+    "eslint-plugin-mongodb": "^1.0.0"
   }
 }
