--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "author": "Rudy Axel Sarabia Veliz",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-router": "^0.0.1",
     "mongoose": "^7.3.3",
+    "mongoose-paginate-v2": "^1.7.1",
     "socket.io": "^4.6.2",
     "uuid": "^9.0.0"
   },
