--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "./src/app.js",
   "type": "module",
+  "engines": {
+    "node": "18.16.0"
+  },
   "scripts": {
-    "start": "node --trace-uncaught ./src/app.js",
+    "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,12 +21,19 @@
   "author": "Rudy Axel Sarabia Veliz",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-router": "^0.0.1",
+    "express-session": "^1.17.3",
     "mongoose": "^7.3.3",
     "mongoose-paginate-v2": "^1.7.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.6.2",
     "uuid": "^9.0.0"
   },
