--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.3.3",
     "mongoose-paginate-v2": "^1.7.1",
+    "mongoose-sequence": "^5.3.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
