--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^7.3.3",
     "mongoose-paginate-v2": "^1.7.1",
     "mongoose-sequence": "^5.3.1",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
